# fingerprint_attendance

./: AUTHORS  INSTALL  README  README.md  TODO  attendance_system.py  attendance_system_mp.sql  db_schema_example.sql  errors.txt
config/: attendance_system.cfg  attendance_system.cfg.bak  attendance_system.sql
lib/: Makefile  Makefile.am  Makefile.in  _pyfprint_swig.la  _pyfprint_swig_la-pyfprint_swig.lo  pyfprint.py  pyfprint_demo.glade  pyfprint_demo.py  pyfprint_swig.c  pyfprint_swig.i  pyfprint_swig.py
lib/.deps/: _pyfprint_swig_la-pyfprint_swig.Plo
lib/.libs/: _pyfprint_swig.lai  _pyfprint_swig.so.0.0.0  _pyfprint_swig.so.0.0.0T
locale/en_US/LC_MESSAGES/: attendance_system.mo
locale/es_ES/LC_MESSAGES/: attendance_system.mo
modules/: attendance.py  configuration.py  event.py  report.py  user.py
po/: POTFILES.in  en_US.po  es.po  messages.pot
